style.css
*{
    margin:0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Inter", sans-serif;
}

html,body{
    height: 100%;
    width: 100%;
    color: #fff;
    background-color: #111;
}

#main {
    background-color: #111;
}

nav{
    position: fixed;
    height: 12vh;
    display: flex;
    align-items: flex-start;
    width: 100%;
    padding: 2vw 10.4vw;
    justify-content: space-between;
    background-color: #111;
    z-index: 1000;
}

nav h1{
    font-size: 1.6vw;
}

.nav-part2{
    display: flex;
    gap: 2vw;
    align-items: flex-start;
    padding: 1vh 0;
    position: relative;
    z-index: 10;
}

.nav-part2 h4{
    font-size: 0.73vw;
    font-weight: 600;
    text-transform: uppercase;
    margin-bottom: 2.6vw;

}

.nav-part2 h5{
    margin-bottom: 1vw;
    display: none;
    overflow: hidden;
    
}

.nav-part2 h5 span{
    font-weight: 400;
    font-size: 0.74vw;
    transform: translateY(25px);
    display: inline-block;

}

.bottom-div{
    margin-top: 2vw;
    width: 9vw;
}

.bottom-div h5{
    overflow: hidden;
    margin-bottom: 0.4vw;
}

.bottom-div h5 span{
    font-size: 0.8vw;
    display: inline-block;
    font-weight: 500;
    opacity: 0;

}


nav > button:not(.mobile-menu){
    background-color: #0BA34E;
    display: flex;
    align-items: center;
    padding: 12px 14px;
    border-radius: 50px;
    font-size: 1vw;
    text-transform: uppercase;
    font-weight: 700;
    border: none;
}

nav > button:not(.mobile-menu) svg{
    height: 1vw;
    margin-left: 1vw;
}

.mobile-menu {
    display: none;
}

#nav-bottom{
    width: 80%;
    height: 0vh;
    position: absolute;
    top: 100%;
    background-color: #111;
    z-index: 9;
    border-bottom: 1px solid #fff;
}

#moving-div {
    margin-top: 10vh;
    position: absolute;
    bottom: 3%;
    white-space: nowrap;
    padding: 1.2vw;
    overflow: hidden;
    width: 44%;

}

#moving-div .move {
    display: inline-block;
    animation-name: mobe;
    animation-duration: 7s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
}

#moving-div .move img {
    height: 1vw;
    margin: 0 1.2vw;
}

@keyframes mobe {
    0% {
        transform: translateX(0);
    }

    100% {
        transform: translateX(-100%);
    }

}
#blur-left{
    height: 100%;
    width: 20%;
    background-color: red;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 2;
    background: linear-gradient(to right,#111,transparent);
}

#blur-right{
    height: 100%;
    width: 20%;
    background-color: red;
    position: absolute;
    top: 0;
    right: 0;
    z-index: 2;
    background: linear-gradient(to right,transparent,#111);
}

#page1{ 
    height: 100vh;
    width: 100%;
    background-color: #111;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: relative;
}

#page1 h1{
    font-size: 8.5vw;
    text-transform: uppercase;
    font-weight: 900;
    line-height: 8.5vw;
}

#page1 h1 svg{
    height: 6vw;
    width: 6vw;
    background-color: #0BA34E;  
    border-radius: 50%;
}

#page1 p{
    text-align: center;
    font-weight: 400;
    margin-top: 3vh;
}

#page1-circle{
    display: flex;
    align-items: center;
    justify-content: center;

}
#page1-circle h4{
    font-weight: 400;
    font-size: 1vw;
    text-transform: lowercase;
    padding: 5px 12px;
    border: 1px solid #a5a5a5;
    border-radius: 50px;
    margin-top: 0.5vw;

}

#page1-circle h4:nth-last-child(2){
    border: none;
    padding: 2.5px;
}

#page2{
    height: 100vh;
    width: 100%;
    background-color: #111;
    position: relative;
    padding: 0vw 10.5vw;
    padding-bottom: 8vw;
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-top: 1px solid #333;
}
#page2-left{
    height: 100%;
    width: 40%;
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    flex-direction: column;
    padding: 3vw 0;
}

#page2-left p{
    font-size: 0.8vw;
}


#page2-left h5{
    width: 75%;
    font-weight: 400;
    font-size: 1.2vw;
}

#page2-right{
    height: 100%;
    width: 50%;
}

.right-elem{
    position: relative;
    padding-top: 2vw;
    padding-bottom: 5vw;
    border-bottom: 1px solid #333;
}

.right-elem h2{
    font-size: 1.vw;
    font-weight: 400;

}

.right-elem img{
    height: 5vw ;
    width: 5vw;
    border-radius: 50%;
    object-fit: cover;
    position: absolute;
    opacity: 0;
    scale: 0;
}

#page3{
    height: 100vh;
    width: 100%;
    background-color: #111;
    position: relative;
    background-image: url(https://cdn.prod.website-files.com/64a2ab71942e1d57feb6fe39/691466acdb36796ec0937231_showreel_preview_still_v5.avif);
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
}
.page3-center{
    display: flex;
    align-items: center;
    flex-direction: column;
    padding: 1vw;
}
.page3-center .icon{
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 3.3vw;
    border-radius: 50%;
    background-color: #fff;
}
.page3-center .icon i{
    color: #111;
    font-size: 2.8vw;
}
.page3-center h5{
    font-size: 0.8vw;
    border-radius: 50px;
    padding: 10px 20px;
    font-weight: 700;
    opacity: 0;
    transition: all ease 0.5s;
    text-transform: uppercase;
    transform: translateY(10%);
    background-color: #fff;
    color: #000;
    margin-top: 0.5vw;
}

.page3-center:hover h5{
    opacity: 1;
    cursor: pointer;
    transform: translateY(0%);
}
#page3 video{
    height: 100%;
    width: 100%;
    position: absolute;
    object-fit: cover;
    transform: scaleX(0.7) scaleY(0);
    opacity: 0;
    border-radius: 30px;
    z-index: 99999;
}

#page4 {
    min-height: 100vh;
    width: 100%;
    background-color: #fff;
    position: relative;
    padding-bottom: 13vh;
}
/* ... */

